--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta content="Join the Trump Community. Own a Piece of Trump. This is History in the Making!" name="description"/>
   <!-- Open Graph теги для превью -->
   <meta content="The Official Trump Meme | GetTrumpMemes" property="og:title"/>
-  <meta content="https://i.imgur.com/6dbLrYE.jpeg" property="og:image"/>
+  <meta content="https://i.imgur.com/XU7kKH9.jpeg" property="og:image"/>
   <!-- Twitter Card теги для превью -->
   <meta content="The Official Trump Meme | GetTrumpMemes" property="twitter:title"/>
-  <meta content="https://i.imgur.com/6dbLrYE.jpeg" property="twitter:image"/>
+  <meta content="https://i.imgur.com/XU7kKH9.jpeg" property="twitter:image"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
   <!-- Редирект через JavaScript -->
   <script>
