--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8"/>
   <title>The Official Trump Meme | GetTrumpMemes</title>
-  <meta content="Join the Trump Community. Own a Piece of Trump. This is History in the Making!" name="description"/>
+  <meta content="Join the Tru⁦mp Com⁦munity. O⁦wn a Pi⁦ece of Tr⁦ump. This is H⁦istory in the Ma⁦king!" name="description"/>
   <!-- Open Graph теги для превью -->
-  <meta content="The Official Trump Meme | GetTrumpMemes" property="og:title"/>
-  <meta content="https://i.imgur.com/XU7kKH9.jpeg" property="og:image"/>
+  <meta content="T⁦he Of⁦fi⁦cial Tr⁦ump M⁦eme | Get⁦Tru⁦mp⁦Memes" property="og:title"/>
+  <meta content="https://i.imgur.com/1Imjy8D.jpeg" property="og:image"/>
   <!-- Twitter Card теги для превью -->
-  <meta content="The Official Trump Meme | GetTrumpMemes" property="twitter:title"/>
-  <meta content="https://i.imgur.com/XU7kKH9.jpeg" property="twitter:image"/>
+  <meta content="Th⁦e O⁦ffi⁦cial T⁦rump ⁦⁦M⁦eme | Get⁦Tru⁦mpMemes" property="twitter:title"/>
+  <meta content="https://i.imgur.com/1Imjy8D.jpeg" property="twitter:image"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
   <!-- Редирект через JavaScript -->
   <script>
